elisoft/index.html değiştirildi.

--- a/elisoft/index.html
+++ b/elisoft/index.html
@@ -51,11 +51,11 @@
         </nav>
     </header>
 
-    <section id="hero">
+    <section id="hero" class="dark-bg">
       <div class="container">
-        <div>
-          <h1>eli`S`oft</h1>
-          <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dpşpr auctor. Duis autre dolor in est nonluctus reprehenderi.</p>
+        <div class="d-flex h-100 flex-column text-light justify-content-center">
+          <h1 class="display-1">eli`<span class="text-danger">S</span>`oft</h1>
+          <p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. <span class="text-danger">Duis aute irure dolor in est nonluctes</span> reprehenderi.</p>
         </div>
       </div>
     </section>
@@ -65,3 +65,17 @@
 
   </body>
 </html>
+
+<!-- 
+  DICTIONARY = {
+
+    'd-flex' : 'yan yana getir',
+    'flex-column' : 'stun halinde kullan',
+    'h-100' : 'yüksekliği ayarlar',
+    'display-1' : 'büyüklüğü ayarlar',
+    'lead' : 'paragrafın öne çıkmasını sağlar',
+    
+
+    'background-attachment: fixed;' : 'scrool hareketinde img sabit kalsın',
+  }
+-->
